Corrigindo configuração do GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,23 +16,23 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Entrar na pasta correta
-        run: cd back-end-educa-facil
-
-      - name: Instalar dependências
-        run: pnpm install --frozen-lockfile
-
-
       - name: Configurar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'pnpm' # Otimiza cache de dependências
+
+      - name: Instalar pnpm
+        run: npm install -g pnpm
 
       - name: Instalar dependências
-        run: pnpm install
+        working-directory: back-end-educa-facil
+        run: pnpm install --frozen-lockfile
 
       - name: Rodar testes
+        working-directory: back-end-educa-facil
         run: pnpm test
 
       - name: Fazer build da aplicação
+        working-directory: back-end-educa-facil
         run: pnpm build
