Corrigindo instalação do pnpm no GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,17 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Configurar Node.js
+      - name: Configurar Node.js e pnpm
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'pnpm' # Otimiza cache de dependências
+          cache: 'pnpm'
 
       - name: Instalar pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
+        run: npm install -g pnpm
+
+      - name: Verificar instalação do pnpm
+        run: pnpm --version
 
       - name: Instalar dependências
         working-directory: back-end-educa-facil
