Corrigindo setup do pnpm no GitHub Actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,12 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Configurar Node.js e pnpm
+      - name: Configurar Node.js com pnpm
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'pnpm'
-
-      - name: Instalar pnpm
-        run: npm install -g pnpm
+          package-manager: 'pnpm'  # Configura o pnpm automaticamente
 
       - name: Verificar instalação do pnpm
         run: pnpm --version
