--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'pnpm' # Mantém o cache das dependências
+          cache: 'pnpm'
 
-      - name: Instalar pnpm
-        run: npm install -g pnpm
+      - name: Instalar pnpm manualmente
+        run: |
+          curl -fsSL https://get.pnpm.io/install.sh | sh
+          export PATH="$HOME/.local/share/pnpm:$HOME/.npm-global/bin:$PATH"
+          echo "PATH atualizado: $PATH"
 
       - name: Verificar instalação do pnpm
         run: pnpm --version
