--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,15 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Configurar Node.js
+      - name: Configurar Node.js e pnpm
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'  # Alternativa ao cache do pnpm
+          cache: 'pnpm'  # Agora o cache usa pnpm, não npm
+          check-latest: true
 
-      - name: Instalar pnpm manualmente
-        run: |
-          curl -fsSL https://get.pnpm.io/install.sh | sh
-          export PATH="$HOME/.local/share/pnpm:$HOME/.npm-global/bin:$PATH"
-          echo "PATH atualizado: $PATH"
+      - name: Instalar pnpm corretamente
+        run: npm install -g pnpm
 
       - name: Verificar instalação do pnpm
         run: pnpm --version
