fix:ajuste nos teste para enxergar o alias config

--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -71,6 +71,9 @@
     "json",
     "ts"
   ],
+  "moduleNameMapper": {
+    "^@config/(.*)$": "<rootDir>/config/$1"
+  },
   "rootDir": "src",
   "testRegex": ".*\\.spec\\.ts$",
   "transform": {
