--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -32,6 +32,7 @@
     "class-validator": "0.14.2",
     "dotenv": "16.5.0",
     "git-rev-sync": "3.0.2",
+    "lint": "0.8.19",
     "pg": "8.16.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
