feat:creation of access guards for routes

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -1,7 +1,10 @@
 AMBIENTE=
-DB_HOST_DEV=
 DB_HOST_PROD=
+DB_HOST_DEV=
 DB_PORT=
+DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
-DB_DATABASE=
+BCRYPT_SALT_ROUNDS=
+JWT_SECRET=
+JWT_EXPIRES_IN=
