feat:email module implementation

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -7,4 +7,8 @@ DB_USERNAME=
 DB_PASSWORD=
 BCRYPT_SALT_ROUNDS=
 JWT_SECRET=
+SECRET_JWT_EMAIL=
 JWT_EXPIRES_IN=
+EMAIL_USER=
+EMAIL_PASSWORD=
+senha_da_conta=
