--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -35,6 +35,7 @@
     "class-validator": "0.14.2",
     "dotenv": "16.5.0",
     "git-rev-sync": "3.0.2",
+    "nodemailer": "7.0.5",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.16.0",
@@ -55,6 +56,7 @@
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.7",
+    "@types/nodemailer": "6.4.17",
     "@types/passport": "1.0.17",
     "@types/passport-jwt": "4.0.1",
     "@types/supertest": "6.0.2",
