--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -20,11 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "6.0.1",
     "@nestjs/common": "11.0.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.1",
     "@nestjs/jwt": "11.0.0",
-    "@nestjs/microservices": "11.1.3",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.1",
     "@nestjs/typeorm": "11.0.0",
@@ -52,6 +52,8 @@
     "@nestjs/testing": "11.0.1",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.7",
+    "@types/amqp-connection-manager": "3.4.5",
+    "@types/amqplib": "0.10.7",
     "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
