chore: detahes finais

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -1,7 +1,7 @@
-AMBIENTE=
-DB_HOST_DEV=
-DB_HOST_PROD=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+AMBIENTE=dev
+DB_HOST_DEV=localhost
+DB_HOST_PROD=db
+DB_PORT=5432
+DB_USERNAME=nest_user
+DB_PASSWORD=nest_password
+DB_DATABASE=nest_db
