feat:completion of the create user use case

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -8,6 +8,7 @@ DB_PASSWORD=
 BCRYPT_SALT_ROUNDS=
 JWT_SECRET=
 SECRET_JWT_EMAIL=
+JWT_EMAIL_EXPIRES_IN=
 JWT_EXPIRES_IN=
 EMAIL_USER=
 EMAIL_PASSWORD=
