--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -1,10 +1,17 @@
 AMBIENTE=
-DB_HOST_PROD=
+
 DB_HOST_DEV=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_PORT_DEV=
+DB_DATABASE_DEV=
+DB_USERNAME_DEV=
+DB_PASSWORD_DEV=
+
+DB_HOST_PROD=
+DB_PORT_PROD=
+DB_DATABASE_PROD=
+DB_USERNAME_PROD=
+DB_PASSWORD_PROD=
+
 BCRYPT_SALT_ROUNDS=
 JWT_SECRET=
 SECRET_JWT_EMAIL=
@@ -12,4 +19,3 @@ JWT_EMAIL_EXPIRES_IN=
 JWT_EXPIRES_IN=
 EMAIL_USER=
 EMAIL_PASSWORD=
-senha_da_conta=
