--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.1",
+    "@nestjs/swagger": "11.2.0",
     "@nestjs/typeorm": "11.0.0",
     "amqp-connection-manager": "4.1.14",
     "amqplib": "0.10.8",
@@ -34,11 +35,13 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "dotenv": "16.5.0",
+    "express-basic-auth": "1.2.1",
     "git-rev-sync": "3.0.2",
     "nodemailer": "7.0.5",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.16.0",
+    "redoc-express": "2.1.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1",
     "typeorm": "0.3.24",
