refactor:code improvement

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -5,12 +5,15 @@ DB_PORT_DEV=
 DB_DATABASE_DEV=
 DB_USERNAME_DEV=
 DB_PASSWORD_DEV=
+URL_SERVER_DEV=
 
 DB_HOST_PROD=
 DB_PORT_PROD=
+URL_SERVER_PROD=
 DB_DATABASE_PROD=
 DB_USERNAME_PROD=
 DB_PASSWORD_PROD=
+
 
 BCRYPT_SALT_ROUNDS=
 JWT_SECRET=
