--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "swiper": "^11.2.10",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/swiper": "^5.4.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.7.0",
