--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -18,13 +18,15 @@
     "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
-    "@mui/icons-material": "^7.3.1",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.11.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "formik": "^2.4.6",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
@@ -61,6 +63,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "sass": "^1.90.0",
+    "sass-embedded": "^1.92.0",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
