--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.17"
