--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -23,6 +23,7 @@
     "@mui/x-date-pickers": "^8.11.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.89.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10",
     "use-debounce": "^10.0.5",
     "zod": "^4.0.17"
