fix:migração do nodeemail para o resend

--- a/back-end-educa-facil/.env.example
+++ b/back-end-educa-facil/.env.example
@@ -2,10 +2,10 @@ AMBIENTE=
 
 DB_HOST_DEV=
 DB_PORT_DEV=
+URL_SERVER_DEV=
 DB_DATABASE_DEV=
 DB_USERNAME_DEV=
 DB_PASSWORD_DEV=
-URL_SERVER_DEV=
 
 DB_HOST_PROD=
 DB_PORT_PROD=
@@ -22,3 +22,10 @@ JWT_EMAIL_EXPIRES_IN=
 JWT_EXPIRES_IN=
 EMAIL_USER=
 EMAIL_PASSWORD=
+RESEND_API_KEY=
+
+SWAGGER_USER=
+SWAGGER_PASS=
+
+FRONTEND_URL_LOCAL=
+FRONTEND_URL_PROD=
