--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "7.9.1",
     "redoc-express": "2.1.0",
     "reflect-metadata": "0.2.2",
+    "resend": "6.1.0",
     "rxjs": "7.8.1",
     "typeorm": "0.3.24",
     "uuid": "11.1.0"
