--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -41,6 +41,7 @@
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.16.0",
+    "qs": "6.14.0",
     "react-router-dom": "7.9.1",
     "redoc-express": "2.1.0",
     "reflect-metadata": "0.2.2",
@@ -66,6 +67,7 @@
     "@types/nodemailer": "6.4.17",
     "@types/passport": "1.0.17",
     "@types/passport-jwt": "4.0.1",
+    "@types/qs": "6.14.0",
     "@types/supertest": "6.0.2",
     "@types/uuid": "10.0.0",
     "eslint": "9.18.0",
