--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.12",
+    "axios": "^1.12.2",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "expo": "^54.0.12",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
