--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.7.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/swiper": "^5.4.3",
@@ -70,7 +71,7 @@
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0",
+    "vite": "^5.4.10",
     "vitest": "^3.2.4"
   }
 }
