--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
