--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -41,6 +41,7 @@
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "8.16.0",
+    "pnpm": "10.18.3",
     "qs": "6.14.0",
     "react-router-dom": "7.9.1",
     "redoc-express": "2.1.0",
