--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -22,7 +22,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-customisable-alert": "^0.1.20",
     "react-native-dotenv": "^3.4.11",
+    "react-native-modal": "14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
