--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
@@ -31,6 +33,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
     "expo": "^54.0.12",
     "react-test-renderer": "19.1.0",
