--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.28",
+    "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "expo-constants": "~18.0.9",
@@ -35,7 +36,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
