--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
@@ -37,6 +38,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0"
