--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -46,7 +46,8 @@
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
     "@types/react": "~19.1.0",
-    "expo": "^54.0.12",
+    "@types/react-native": "^0.72.8",
+    "expo": "^54.0.23",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
