--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.81.4",
     "react-native-customisable-alert": "^0.1.20",
     "react-native-dotenv": "^3.4.11",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
