--- a/AppEducaFacil/package.json
+++ b/AppEducaFacil/package.json
@@ -42,7 +42,8 @@
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
