--- a/web/frontend-react/.env
+++ b/web/frontend-react/.env
@@ -1,3 +1,3 @@
 VITE_URL_IMGBB=https://api.imgbb.com/1/upload
 VITE_KEY_IMGBB=676c0bd4e17dba1ee3c06b04c599f085
-VITE_API_URL=https://techchallengemodulo2.onrender.com
+VITE_API_URL=https://techchallengemodulo2-emdn.onrender.com
