--- a/back-end-educa-facil/package.json
+++ b/back-end-educa-facil/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "11.0.0",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.1",
+    "@nestjs/platform-socket.io": "11.1.12",
     "@nestjs/swagger": "11.2.0",
     "@nestjs/typeorm": "11.0.0",
+    "@nestjs/websockets": "11.1.12",
     "amqp-connection-manager": "4.1.14",
     "amqplib": "0.10.8",
     "bcrypt": "6.0.0",
@@ -48,6 +50,7 @@
     "reflect-metadata": "0.2.2",
     "resend": "6.1.0",
     "rxjs": "7.8.1",
+    "socket.io": "4.8.3",
     "typeorm": "0.3.24",
     "uuid": "11.1.0"
   },
