--- a/web/frontend-react/package.json
+++ b/web/frontend-react/package.json
@@ -27,6 +27,7 @@
     "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10",
     "use-debounce": "^10.0.5",
