feat:implementation-question-generated

--- a/web/frontend-react/.env
+++ b/web/frontend-react/.env
@@ -1,3 +1,4 @@
-VITE_URL_IMGBB=
-VITE_KEY_IMGBB=
-VITE_API_URL=
+VITE_URL_IMGBB=https://api.imgbb.com/1/upload
+VITE_KEY_IMGBB=676c0bd4e17dba1ee3c06b04c599f085
+VITE_API_URL=http://localhost:3000
+VITE_API_KEY_GEMINI=AIzaSyAF-tUEsiofSGVL2I1OX7GQYIG1v_IlWEI
