--- a/web/frontend-react/package.json
+++ b/web/frontend-react/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10",
     "use-debounce": "^10.0.5",
