fix:ajustment-in-home-and-question-form

--- a/web/frontend-react/.env
+++ b/web/frontend-react/.env
@@ -1,4 +1,4 @@
-VITE_URL_IMGBB=https://api.imgbb.com/1/upload
-VITE_KEY_IMGBB=676c0bd4e17dba1ee3c06b04c599f085
-VITE_API_URL=https://techchallengemodulo2-emdn.onrender.com
-VITE_API_KEY_GEMINI=AIzaSyBVKq9J0QFg6PWTd9EG24RJRapKH4dr4l0
+VITE_URL_IMGBB=
+VITE_KEY_IMGBB=
+VITE_API_URL=
+VITE_API_KEY_GEMINI=
